added security tests amd mappings and done